--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>AboutMe</title>
-        <link rel="stylesheet" href="/css/reset.css">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -37,6 +37,6 @@
         <footer>
          &copy; ALL RIGHTS RESERVED
         </footer>
-        <script src="/js/app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
