--- a/index.html
+++ b/index.html
@@ -17,22 +17,40 @@
             </nav>    
         </header>
         <main>
-            <section>
+            <section id="intro">
                 <h2>My Story</h2>
-
-                <p id="first">My name is Mohammad Al-Khaleel and i have 33 years old, I was born in zarqa 
-                    but i live in amman right now with my family, I got married three years ago and i have one daughter 
-                    and i have my own house in amman.</p>
-
-                <P id="second">I graduated from university of jordan in 2011 with bachelor degree in mechatronics 
-                    engineering, I spent 5 years of hard studying but i enjoyed every moment.
-                    After that I started my career life, I got my first job in oman as field service 
-                    engineer and it was hard work and i settled in oman about 7 years in same job.</p>
-
-                <p id="third"> I love my family and i am trying always to spend more time with them 
-                    and doing some activities like shopping, watching movies and so on, and i have my activities
-                    like watching football matches and anime also sometimes playing video games.</p>
+                <div>
+                  <ul>
+                    <li id="first">My name is Mohammad Al-Khaleel and i have 33 years old, I was born in zarqa 
+                        but i live in amman right now with my family, I got married three years ago and i have one daughter 
+                        and i have my own house in amman.</li>
+                    <li id="second">I graduated from university of jordan in 2011 with bachelor degree in mechatronics 
+                        engineering, I spent 5 years of hard studying but i enjoyed every moment.
+                        After that I started my career life, I got my first job in oman as field service 
+                        engineer and it was hard work and i settled in oman about 7 years in same job.</li>
+                    <li id="third">I love my family and i am trying always to spend more time with them 
+                        and doing some activities like shopping, watching movies and so on, and i have my activities
+                        like watching football matches and anime also sometimes playing video games.</li>
+                  </ul>
+                </div>
             </section> 
+            <section id="more">
+                <h2>My Top Ten TV Shows</h2>
+                <div>
+                    <ol>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ol>
+                </div>
+            </section>
         </main>
         <footer>
          &copy; ALL RIGHTS RESERVED
